[package]
name = "utilon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "utilon-cli"
path = "bin/utilon-cli.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
